@@ -54,6 +54,7 @@ public:
 	 * @param y The y-coordinate of the vertex.
 	 **/
 	void setNextVertex(float x, float y);
+	void setNextVertex();
 
 	/**
 	 * Establish connectivity to a vertex that precedes
@@ -62,6 +63,17 @@ public:
 	 * @param y The y-coordinate of the vertex.
 	 **/
 	void setPreviousVertex(float x, float y);
+	void setPreviousVertex();
+
+	/**
+	 * Gets the vertex that follows the last vertex.
+	 **/
+	bool getNextVertex(float &x, float &y) const;
+
+	/**
+	 * Gets the vertex that precedes the first vertex.
+	 **/
+	bool getPreviousVertex(float &x, float &y) const;
 
 	/**
 	 * Returns a child EdgeShape.
