@@ -47,6 +47,14 @@ public:
 
 	virtual ~EdgeShape();
 
+	void setNextVertex(float x, float y);
+	void setNextVertex();
+	bool getNextVertex(float &x, float &y) const;
+
+	void setPreviousVertex(float x, float y);
+	void setPreviousVertex();
+	bool getPreviousVertex(float &x, float &y) const;
+
 	/**
 	 * Returns the transformed points of the edge shape.
 	 * This function is useful for debug drawing and such.
