@@ -36,6 +36,9 @@ MouseJoint::MouseJoint(Body *body1, float x, float y)
 	: Joint(body1)
 	, joint(NULL)
 {
+	if (body1->getType() == Body::BODY_KINEMATIC)
+		throw love::Exception("Cannot attach a MouseJoint to a kinematic body");
+
 	b2MouseJointDef def;
 
 	def.bodyA = body1->world->getGroundBody();
