@@ -140,8 +140,10 @@ int PrismaticJoint::getLimits(lua_State *L)
 
 int PrismaticJoint::getAxis(lua_State *L)
 {
-	lua_pushnumber(L, joint->GetLocalAxisA().x);
-	lua_pushnumber(L, joint->GetLocalAxisA().y);
+	b2Vec2 axis = joint->GetLocalAxisA();
+	getBodyA()->getWorldVector(axis.x, axis.y, axis.x, axis.y);
+	lua_pushnumber(L, axis.x);
+	lua_pushnumber(L, axis.y);
 	return 2;
 }
 
